--- a/example/src/Containers/AppContainer/Component/App.css
+++ b/example/src/Containers/AppContainer/Component/App.css
@@ -1,12 +1,27 @@
 
 @font-face {
-    font-family:Roboto Condensed;
-   src: url(fonts/Roboto_Condensed/RobotoCondensed-Regular.tff);
+    font-family:Montserrat;
+    src: url('./../../../Theme/Font/Montserrat/Montserrat-Regular.otf');
 }
 
 .rbc-example-app-root {
     background: #FFFFFF;
-    font-family:Roboto Condensed;
+    font-family:Montserrat;
     font-weight: normal;
     font-style: normal;
+
+    color: #333333;
+}
+
+.rbc-example-app-container {
+    display: flex;
+    padding-top: 72px;
+}
+
+.rbc-example-app-container-navigation {
+    /* flex: 3; */
+}
+
+.rbc-example-app-container-children {
+    /* flex: 7; */
 }
