--- a/example/src/Containers/HeaderContainer/Component/Header.css
+++ b/example/src/Containers/HeaderContainer/Component/Header.css
@@ -1,4 +1,7 @@
 .rbc-example-header-root {
+
+    position: fixed;
+
     width: 100%;
     background: #FFFFFF;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
