--- a/example/src/Components/ChildLayout/Component/ChildLayout.css
+++ b/example/src/Components/ChildLayout/Component/ChildLayout.css
@@ -1,4 +1,5 @@
 .rbc-example-layout-root {
+  padding: 8px 24px;
 }
 
 .rbc-example-layout-heading {
@@ -12,14 +13,14 @@
   font-size: 18px;
   line-height: 21px;
 
-  margin: 8px 0px;
+  margin: 16px 0px;
 }
 
 .rbc-example-layout-content {
   font-size: 14px;
   line-height: 16px;
 
-  margin: 8px 0px;
+  margin: 16px 0px;
 }
 
 .rbc-example-layout-remark {
@@ -28,7 +29,7 @@
 
   color: #828282;
 
-  margin: 8px 0px;
+  margin: 16px 0px;
   padding: 4px 8px;
 
   border-radius: 2px;
@@ -39,7 +40,7 @@
   font-size: 14px;
   line-height: 16px;
 
-  margin: 8px 0px;
+  margin: 16px 0px;
   padding: 8px;
 
   border-radius: 2px;
@@ -51,9 +52,16 @@
   font-size: 14px;
   line-height: 16px;
 
-  margin: 8px 0px;
+  margin: 16px 0px;
   padding: 8px;
 
   border: 1px solid #e0e0e0;
   border-radius: 2px;
+}
+
+.rbc-example-layout-custom {
+  font-size: 14px;
+  line-height: 16px;
+
+  margin: 16px 0px;
 }
