--- a/src/Containers/FormComponent/Component/Form.css
+++ b/src/Containers/FormComponent/Component/Form.css
@@ -21,7 +21,7 @@
     
 }
 
-.rbc-form-input-text-feild {
+.rbc-form-input-text-field {
     
 }
 
@@ -30,3 +30,54 @@
 }
 
 /* FORM INPUT TEXT END */
+
+/* FORM RADIO START */
+
+.rbc-form-input-radio-root {
+
+}
+
+.rbc-form-input-radio-group {
+    
+}
+
+.rbc-form-input-radio-label {
+    display: block;
+    margin: 4px 8px;
+}
+
+.rbc-form-input-radio-field {
+    display: inline-block;
+    margin: 4px 8px;
+
+    vertical-align: middle;
+}
+
+.rbc-form-input-radio-field input {
+    margin: -2px 4px 0px 0px;
+
+    vertical-align: middle;
+
+    height: 20px;
+    width: 20px;
+}
+
+.rbc-form-input-radio-field input:checked {
+    margin: -2px 4px 0px 0px;
+
+    vertical-align: middle;
+
+    height: 20px;
+    width: 20px;
+}
+
+.rbc-form-input-radio-field label {
+    font-weight: 600;
+    margin: 0px;    
+}
+
+.rbc-form-input-radio-error {
+    
+}
+
+/* FORM RADIO END */
