--- a/example/src/Components/Navigation/Component/Navigation.css
+++ b/example/src/Components/Navigation/Component/Navigation.css
@@ -1,11 +1,14 @@
 .rbc-example-navigation-root {
   position: fixed;
-  height: 100%;
+  height: 90%;
 
   width: inherit;
   max-width: inherit;
 
   border-right: 1px solid rgba(206, 212, 218, 0.5);
+  border-radius: 4px;
+
+  overflow: auto;
 }
 
 .rbc-example-navigation-container {}
