--- a/example/src/Components/Header/Component/Header.css
+++ b/example/src/Components/Header/Component/Header.css
@@ -6,6 +6,8 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
     padding: 0px;
+
+    z-index: 99;
 }
 
 .rbc-example-header {
