--- a/example/src/Components/Navigation/Component/Navigation.css
+++ b/example/src/Components/Navigation/Component/Navigation.css
@@ -6,9 +6,9 @@
   max-width: inherit;
 
   border-right: 1px solid rgba(206, 212, 218, 0.5);
-  border-radius: 4px;
+  /* border-radius: 4px; */
 
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .rbc-example-navigation-container {}
