--- a/example/src/Containers/DocumentationButtonContainer/Component/DocumentationButton.css
+++ b/example/src/Containers/DocumentationButtonContainer/Component/DocumentationButton.css
@@ -7,18 +7,8 @@
 
 .rbc-overview-button-custom {
 
-  font-weight: 600;
+  font-weight: 600 !important;
+  border-radius: 50% !important;
+  padding: 32px !important;
 
-  background-color: white;
-  color: #4caf50;
-  border: 2px solid #4caf50;
-  border-radius: 50%;
-
-  padding: 32px;
-
-  -webkit-transition: all 0.25s;
-  -moz-transition: all 0.25s;
-  transition: all 0.25s;
-
-  outline: none !important;
 }
