--- a/src/Containers/LoaderComponent/Component/Assets/LoaderDotCircle.css
+++ b/src/Containers/LoaderComponent/Component/Assets/LoaderDotCircle.css
@@ -1,14 +1,13 @@
 .rbc-loader-dot-circle {
   color: #333333;
-  font-size: 20px;
-  margin: 100px auto;
+  font-size: 8px;
+  margin: auto;
   width: 1em;
   height: 1em;
   border-radius: 50%;
   position: relative;
-  text-indent: -9999em;
-  -webkit-animation: load4 1.3s infinite linear;
-  animation: load4 1.3s infinite linear;
+  -webkit-animation: load4 2.3s infinite linear;
+  animation: load4 2.3s infinite linear;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
