--- a/src/Containers/LoaderComponent/Component/Assets/LoaderBars.css
+++ b/src/Containers/LoaderComponent/Component/Assets/LoaderBars.css
@@ -4,15 +4,14 @@
   background: #333333;
   -webkit-animation: load1 1s infinite ease-in-out;
   animation: load1 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
+  width: 0.8em;
+  height: 3em;
 }
 .rbc-loader-bars {
   color: #333333;
-  text-indent: -9999em;
-  margin: 88px auto;
+  margin: auto;
   position: relative;
-  font-size: 11px;
+  font-size: 8px;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
@@ -26,23 +25,23 @@
   content: '';
 }
 .rbc-loader-bars:before {
-  left: -1.5em;
+  left: -1em;
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
 .rbc-loader-bars:after {
-  left: 1.5em;
+  left: 1em;
 }
 @-webkit-keyframes load1 {
   0%,
   80%,
   100% {
     box-shadow: 0 0;
-    height: 4em;
+    height: 3em;
   }
   40% {
     box-shadow: 0 -2em;
-    height: 5em;
+    height: 4em;
   }
 }
 @keyframes load1 {
@@ -50,10 +49,10 @@
   80%,
   100% {
     box-shadow: 0 0;
-    height: 4em;
+    height: 3em;
   }
   40% {
     box-shadow: 0 -2em;
-    height: 5em;
+    height: 4em;
   }
 }
