--- a/src/Containers/LoaderComponent/Component/Assets/LoaderDotBounce.css
+++ b/src/Containers/LoaderComponent/Component/Assets/LoaderDotBounce.css
@@ -2,8 +2,8 @@
 .rbc-loader-dot-bounce:before,
 .rbc-loader-dot-bounce:after {
   border-radius: 50%;
-  width: 2.5em;
-  height: 2.5em;
+  width: 1.5em;
+  height: 1.5em;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
   -webkit-animation: load7 1.8s infinite ease-in-out;
@@ -11,10 +11,9 @@
 }
 .rbc-loader-dot-bounce {
   color: #333333;
-  font-size: 10px;
-  margin: 80px auto;
+  font-size: 8px;
+  margin: auto;
   position: relative;
-  text-indent: -9999em;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
@@ -28,12 +27,12 @@
   top: 0;
 }
 .rbc-loader-dot-bounce:before {
-  left: -3.5em;
+  left: -2.5em;
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
 .rbc-loader-dot-bounce:after {
-  left: 3.5em;
+  left: 2.5em;
 }
 @-webkit-keyframes load7 {
   0%,
