--- a/src/Containers/LoaderComponent/Component/Assets/LoaderDotSpin.css
+++ b/src/Containers/LoaderComponent/Component/Assets/LoaderDotSpin.css
@@ -1,18 +1,18 @@
 .rbc-loader-dot-spin {
   color: #333333;
-  font-size: 90px;
+  font-size: 32px;
   text-indent: -9999em;
   overflow: hidden;
   width: 1em;
   height: 1em;
   border-radius: 50%;
-  margin: 72px auto;
+  margin: auto;
   position: relative;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
-  -webkit-animation: load6 1.7s infinite ease, round 1.7s infinite ease;
-  animation: load6 1.7s infinite ease, round 1.7s infinite ease;
+  -webkit-animation: load6 2.5s infinite ease, round 2.5s infinite ease;
+  animation: load6 2.5s infinite ease, round 2.5s infinite ease;
 }
 @-webkit-keyframes load6 {
   0% {
