--- a/src/Containers/LoaderComponent/Component/Loader.css
+++ b/src/Containers/LoaderComponent/Component/Loader.css
@@ -1,8 +1,12 @@
 
 .rbc-loader-body {
-    font-size: 8px !important;
 }
 
 .rbc-loader-message {
-    
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.rbc-loader-non-block-ui {
+    display: inline-block;
 }
