Layout Fixed | Scroll bar improved

--- a/example/src/Containers/AppContainer/Component/App.css
+++ b/example/src/Containers/AppContainer/Component/App.css
@@ -1,47 +1,22 @@
-@font-face {
-  font-family: Montserrat;
-  src: url('./../../../Theme/Font/Montserrat/Montserrat-Regular.otf');
-}
-
 .rbc-example-app-root {
-  background: #ffffff;
-  font-family: Montserrat;
-  font-weight: normal;
-  font-style: normal;
-
-  color: #333333;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .rbc-example-app-container {
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
-  /* padding-top: 72px; */
+
+  overflow: hidden;
 }
 
 .rbc-example-app-container-navigation {
-  /* flex: 3; */
-
-  padding: 72px 0px 0px 0px !important;
+  height: 100%;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, .10);
 }
 
 .rbc-example-app-container-children {
-  /* flex: 7; */
-
-  padding: 72px 0px 0px 0px !important;
-}
-
-::-webkit-scrollbar {
-  width: 4px;
-}
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #c2c2c2;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #c2c0c0;
+  height: 100%;
 }
