--- a/example/src/Components/Navigation/Component/Navigation.css
+++ b/example/src/Components/Navigation/Component/Navigation.css
@@ -1,15 +1,4 @@
-.rbc-example-navigation-root {
-  position: fixed;
-  height: 90%;
-
-  width: inherit;
-  max-width: inherit;
-
-  border-right: 1px solid rgba(206, 212, 218, 0.5);
-  /* border-radius: 4px; */
-
-  /* overflow: auto; */
-}
+.rbc-example-navigation-root {}
 
 .rbc-example-navigation-container {}
 
