--- a/src/Containers/LoaderComponent/Component/Assets/LoaderCircle.css
+++ b/src/Containers/LoaderComponent/Component/Assets/LoaderCircle.css
@@ -1,41 +1,84 @@
-.rbc-loader-circle,
-.rbc-loader-circle:after {
-  border-radius: 50%;
-  width: 8em;
-  height: 8em;
-}
 .rbc-loader-circle {
-  margin: auto;
-  font-size: 6px;
+  display: inline-block;
   position: relative;
-  text-indent: -9999em;
-  border-top: 0.8em solid rgba(255, 255, 255, 0.2);
-  border-right: 0.8em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 0.8em solid rgba(255, 255, 255, 0.2);
-  border-left: 0.8em solid #333333;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.6s infinite linear;
-  animation: load8 1.6s infinite linear;
+  width: 80px;
+  height: 80px;
 }
-@-webkit-keyframes load8 {
+.rbc-loader-circle div {
+  animation: rbc-loader-circle 1.5s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.rbc-loader-circle div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #333333;
+  margin: -4px 0 0 -4px;
+}
+.rbc-loader-circle div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.rbc-loader-circle div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.rbc-loader-circle div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.rbc-loader-circle div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.rbc-loader-circle div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.rbc-loader-circle div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.rbc-loader-circle div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.rbc-loader-circle div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.rbc-loader-circle div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.rbc-loader-circle div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.rbc-loader-circle div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.rbc-loader-circle div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.rbc-loader-circle div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.rbc-loader-circle div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.rbc-loader-circle div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.rbc-loader-circle div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes rbc-loader-circle {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
