--- a/src/Containers/LoaderComponent/Component/Assets/LoaderBars.css
+++ b/src/Containers/LoaderComponent/Component/Assets/LoaderBars.css
@@ -1,58 +1,36 @@
-.rbc-loader-bars,
-.rbc-loader-bars:before,
-.rbc-loader-bars:after {
-  background: #333333;
-  -webkit-animation: load1 1s infinite ease-in-out;
-  animation: load1 1s infinite ease-in-out;
-  width: 0.8em;
-  height: 3em;
-}
 .rbc-loader-bars {
-  color: #333333;
-  margin: auto;
+  display: inline-block;
   position: relative;
-  font-size: 8px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
+  width: 80px;
+  height: 80px;
 }
-.rbc-loader-bars:before,
-.rbc-loader-bars:after {
+.rbc-loader-bars div {
+  display: inline-block;
   position: absolute;
-  top: 0;
-  content: '';
+  left: 8px;
+  width: 12px;
+  background-color: #333333;
+  animation: rbc-loader-bars 1.5s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
-.rbc-loader-bars:before {
-  left: -1em;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
+.rbc-loader-bars div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
 }
-.rbc-loader-bars:after {
-  left: 1em;
+.rbc-loader-bars div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
 }
-@-webkit-keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 3em;
+.rbc-loader-bars div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes rbc-loader-bars {
+  0% {
+    top: 8px;
+    height: 64px;
   }
-  40% {
-    box-shadow: 0 -2em;
-    height: 4em;
-  }
-}
-@keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 3em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 4em;
+  50%, 100% {
+    top: 24px;
+    height: 32px;
   }
 }
